# facebase-ml

./: .gitignore  CLAUDE.md  README.md  coding-guidelines.md  experiment-decisions.md  pyproject.toml
.github/workflows/: release.yml
facebase_ml/: __init__.py  facebase_ml.py
facebase_ml/models/: CNN_model.py  CNN_predict.py
facebase_ml_tools/: __init__.py  facebase_ml.py
facebase_ml_tools/models/: VGG19_pred_example.py
notebooks/: input_file.txt  notebook_template.ipynb
scripts/: create_musmorph_dataset.py
src/: 2-5MW8_test_input.json  deriva_run.py  facebase_ml.py  test.ipynb
src/configs/: __init__.py  assets.py  cifar10_cnn.py  dataset_generation.py  datasets.py  deriva.py  experiments.py  model.py  workflow.py
src/models/: cifar10_cnn.py  model_protocol.py
src/scripts/: __init__.py  annotate_phenotype.py  create_e155_subset.py  create_musmorph_dataset.py  generate_e155_dev_sample.py  generate_subset.py  load_cifar10.py  load_facebase.py  subset_filters.py
